attempt to fix mobile spacing issue

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -98,6 +98,10 @@
   .section__text__p2 {
     font-size: 1.25rem;
   }
+  .section__text__p1 {
+    font-size: 1.25rem;
+    margin: 20px;
+  }
   .title {
     font-size: 2rem;
   }
